--- a/index.html
+++ b/index.html
@@ -12,33 +12,36 @@
   <!--<embed src="file:///home/rafal.miecznik/private/digifanttool.github.io/index.html" width="800px" height="900px" /> -->
 
 
-  <div class="top_bar_container">
-    <div class="topnav">
-      <a class="active" href="#home">Home</a>
-      <a href="#about">About</a>
-      <a href="#demos">Demos</a>
-      <a href="#ordering">Ordering</a>
-      <a href="#contact">Contact</a>
-      <a href="#download">Download</a>
-      <a href="tutorials.html#tutorials.html">HowTo</a>
-      <a href="tutorials.html#tryit">TryIt!</a>
-    </div>
+  <div>
+    <div class="top_bar_container">
+      <div class="topnav">
+        <a class="active" href="index.html#home">Home</a>
+        <a href="index.html#about">About</a>
+        <a href="index.html#demos">Demos</a>
+        <a href="index.html#ordering">Ordering</a>
+        <a href="index.html#contact">Contact</a>
+        <a href="index.html#download">Download</a>
+        <a href="tutorials.html#tutorials.html">Tutorials</a>
+        <a href="tutorials.html#tryit">HowTo</a>
+      </div>
 
-    <div class="top_bar_txt square" id="top_bar">
-      <h1 style="width: 100%; font-size: 2vw;">BLUETOOTH EEPROM EMULATOR FOR DIGIFANT 1 </h1>
-      <h2 style="width: 100%; font-size: 1.4vw; margin: 10px 15px 10px 6%;">Replace old EEPROM chip with this board !
-      </h2>
-      <h2 style="width: 100%; font-size: 1.4vw; margin: 10px 15px 10px 7%;">Enable data feedback for most of available
-        Digifant 1 chips</h2>
-      <h2 style="width: 100%; font-size: 1.4vw; margin: 10px 15px 10px 8%;">TunerPro support for data feedback and hit
-        tracing</h2>
-      <h2 style="width: 100%; font-size: 1.4vw; margin: 10px 15px 10px 9%;">Works in standalone mode without PC
-        connection</h2>
-    </div>
-    <div>
-      <img id="emubt_svg" src="resources/emubt.svg">
+      <div class="top_bar_txt square" id="top_bar">
+        <h1 style="width: 100%; font-size: 2vw;">BLUETOOTH EEPROM EMULATOR FOR DIGIFANT 1 </h1>
+        <h2 style="width: 100%; font-size: 1.4vw; margin: 10px 15px 10px 6%;">Replace old EEPROM chip with this board !
+        </h2>
+        <h2 style="width: 100%; font-size: 1.4vw; margin: 10px 15px 10px 7%;">Enable data feedback for most of available
+          Digifant 1 chips</h2>
+        <h2 style="width: 100%; font-size: 1.4vw; margin: 10px 15px 10px 8%;">TunerPro support for data feedback and hit
+          tracing</h2>
+        <h2 style="width: 100%; font-size: 1.4vw; margin: 10px 15px 10px 9%;">Works in standalone mode without PC
+          connection</h2>
+      </div>
+      <div>
+        <img id="emubt_svg" src="resources/emubt.svg">
+      </div>
     </div>
   </div>
+
   <div class="bottom_border"><br></div>
   <div class=floating_links id="links">
     <a title="messenger" href="https://m.me/tuningtool"><img class="contact_link contact_link_left"
@@ -299,6 +302,6 @@
 
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<!-- <script>includeHTML();</script> -->
 <script language="JavaScript" type="text/javascript" src="main.js"></script>
-
 </html>
