--- a/tutorials.html
+++ b/tutorials.html
@@ -18,28 +18,22 @@
         <a href="index.html#contact">Contact</a>
         <a href="index.html#download">Download</a>
         <a href="tutorials.html#tutorials.html">Tutorials</a>
-        <a href="tutorials.html#tryit">TryIt!</a>
+        <a href="tutorials.html#tryit">HowTo</a>
       </div>
 
       <div class="top_bar_txt square" id="top_bar">
-        <h1 style="width: 100%; font-size: 2vw">
-          BLUETOOTH EEPROM EMULATOR FOR DIGIFANT 1
-        </h1>
-        <h2 style="width: 100%; font-size: 1.4vw; margin: 10px 15px 10px 6%">
-          Replace old EEPROM chip with this board !
+        <h1 style="width: 100%; font-size: 2vw;">BLUETOOTH EEPROM EMULATOR FOR DIGIFANT 1 </h1>
+        <h2 style="width: 100%; font-size: 1.4vw; margin: 10px 15px 10px 6%;">Replace old EEPROM chip with this board !
         </h2>
-        <h2 style="width: 100%; font-size: 1.4vw; margin: 10px 15px 10px 7%">
-          Enable data feedback for most of available Digifant 1 chips
-        </h2>
-        <h2 style="width: 100%; font-size: 1.4vw; margin: 10px 15px 10px 8%">
-          TunerPro support for data feedback and hit tracing
-        </h2>
-        <h2 style="width: 100%; font-size: 1.4vw; margin: 10px 15px 10px 9%">
-          Works in standalone mode without PC connection
-        </h2>
+        <h2 style="width: 100%; font-size: 1.4vw; margin: 10px 15px 10px 7%;">Enable data feedback for most of available
+          Digifant 1 chips</h2>
+        <h2 style="width: 100%; font-size: 1.4vw; margin: 10px 15px 10px 8%;">TunerPro support for data feedback and hit
+          tracing</h2>
+        <h2 style="width: 100%; font-size: 1.4vw; margin: 10px 15px 10px 9%;">Works in standalone mode without PC
+          connection</h2>
       </div>
       <div>
-        <img id="emubt_svg" src="resources/emubt.svg" />
+        <img id="emubt_svg" src="resources/emubt.svg">
       </div>
     </div>
 
@@ -107,6 +101,13 @@
           <img class="grid_picture" src="resources/tooltip_example2.png" />
           <img class="grid_picture" src="resources/tooltip_example3.png" />
         </div>
+        <p>
+          <a>EMUBT FIRMWARE UPDATE</a><br />
+          Emulator board and windows application is still being improved. Changes done in emulator firmware can be applied with REFLASH button.
+          Windows application EMUBT.exe also should be used in compatible version delivered with firmware. But in most cases it is possible to do reflashing
+          with different versions of EMUBT.exe.
+          The latest version of emulator firmware and emubt.exe application can be found in <a href="index.html#download">Download</a> section.
+        </p>
 
         <h2>TunerPro and ALDLdroid</h2>
         <h3>TunerPro</h3>
